Calendar Activity Layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".NewAccount" />
         <activity android:name=".SignIn" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".Calendar" />
+        <activity android:name=".Overview"></activity>
     </application>
 
 </manifest>
