--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".Calendar" />
         <activity android:name=".Overview" />
-        <activity android:name=".Navigation"></activity>
+        <activity android:name=".Navigation" />
+        <activity android:name=".Timeline"></activity>
     </application>
 
 </manifest>
